cleaning code using inspection